# Trading_Project_004

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  demo_enterprise_validation.py  dna_research_reports.json  performance_validation_report.json  pyproject.toml
.claude/: settings.local.json
.md/: CLAUDE.md  CURRENT_STATUS.md  DATABASE_DESIGN.md  FILES_USER_MANUAL.md  GENERATED_STATUS_SUMMARY.md  PLANNING.md  PRD.md  RESEARCH_INSIGHTS.md  RULES.md  SESSION_ARCHIVE.md  TASKS.md  THE_THEORY.md
.py/: auto_project_updater.py  auto_project_updater_backup.py  fix_encoding.py  project_status_reviewer.py
config/: .env.template  config.yaml
dashboard/: index.html
migrations/: env.py
migrations/versions/: 8f1717123cfe_add_database_indexes_for_performance_.py  a1a712c0eb2b_initial_database_schema_with_.py
src/: __init__.py  batch_optimizer.py  config_manager.py  config_validator.py  create_enhanced_database.py  data_storage_service.py  data_validator.py  database_manager.py  database_models.py  dna_research_api.py  dna_research_engine.py  enhanced_dna_models.py  enterprise_data_validator.py  generate_sample_data.py  get_positions.py  github_backup_manager.py  historical_data_downloader.py  ib_connection_tester.py  ib_connector.py  ib_pipeline_integrator.py  indicators_manager.py  logging_setup.py  multi_timeframe_validator.py  performance_tester.py  performance_validator.py  rate_limiter.py
tests/: __init__.py
