[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-project-004"
version = "0.1.0"
description = "Advanced Trading Application with IB Integration"
authors = [
    {name = "Trading Project Team"}
]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "jupyter",
    "ibapi",
    "ib_insync",
    "ta-lib",
    "yfinance",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
strict_optional = true